feat: Add templates page with step-by-step instructions and copy buttons

--- a/dashboard/src/index.html
+++ b/dashboard/src/index.html
@@ -116,15 +116,17 @@
                         </div>
                         
                         <div class="form-group">
-                            <label>Templates Disponibles:</label>
+                            <label>¿Necesitas ayuda para empezar?</label>
                             <div class="templates-info">
-                                <p><strong>Opcion 1:</strong> Usa uno de nuestros templates y personalizalo:</p>
-                                <ul>
-                                    <li><a href="#" onclick="useTemplate('static')">Sitio Estatico</a> (HTML + CSS + JS)</li>
-                                    <li><a href="#" onclick="useTemplate('react')">React App</a> (React + Vite)</li>
-                                    <li><a href="#" onclick="useTemplate('flask')">Flask Blog</a> (Python + Flask)</li>
-                                </ul>
-                                <p><strong>Opcion 2:</strong> Usa tu propio repositorio con Dockerfile</p>
+                                <p style="margin-bottom: 15px;">
+                                    <strong>📦 ¿No tienes un repositorio aún?</strong><br>
+                                    <a href="templates.html" target="_blank" style="color: #3498db; text-decoration: none; font-weight: 500;">
+                                        → Ver templates disponibles con instrucciones completas
+                                    </a>
+                                </p>
+                                <p style="color: #7f8c8d; font-size: 14px;">
+                                    Los templates incluyen todos los archivos necesarios (HTML, CSS, Dockerfile) listos para copiar a tu repositorio de GitHub.
+                                </p>
                             </div>
                         </div>
 
